Fix flow documentation

--- a/m2x.html
+++ b/m2x.html
@@ -50,7 +50,7 @@ The user will set the following message proprties:
     <li><b>msg.sub_topic_id</b> - (optional)
 </ul>
 <ul>
-    <li> msg.topic - The type of object to act on - distribution,device,chart.key.
+    <li> msg.topic - The type of object to act on - distributions, devices, charts, keys.
     <li> msg.action - An action to be applied for this type of object - The second level entry in the below list. (catalog for example)
     <li> msg.payload - A json that represent the body for the rest API, only if such is defiend.
     <li> msg.topic_id - a unique id for either device,distribution,key or chart
