--- a/m2x.html
+++ b/m2x.html
@@ -39,7 +39,7 @@
 
 <script type="text/x-red" data-help-name="m2x">
 <div>
-The user will set the following message proprties:
+The user will set the following message properties:
 
 <ul>
     <li><b>msg.topic</b> - (required)
