--- a/m2x.html
+++ b/m2x.html
@@ -12,7 +12,17 @@
         align: "right",
         label: function () {
             var feedNode = RED.nodes.node(this.feed);
-            return this.name || (feedNode ? feedNode.label() : "m2x");
+            var name = "m2x";
+
+            if (this.name) {
+                name = this.name;
+            }
+
+            if (feedNode && feedNode.label()) {
+                name += ":" + feedNode.label();
+            }
+
+            return name;
         },
         labelStyle: function () {
             return this.name ? "node_label_italic" : "";
