Mark specific properties as required

--- a/m2x.html
+++ b/m2x.html
@@ -3,7 +3,7 @@
         category: 'storage-output',
         color: "#1996c7",
         defaults: {
-            feed: { type: "m2x feed" },
+            feed: { type: "m2x feed", required: true },
             name: { value: "" }
         },
         inputs: 1,
