--- a/m2x_feed.html
+++ b/m2x_feed.html
@@ -2,8 +2,8 @@
     RED.nodes.registerType("m2x feed", {
         category: 'config',
         defaults: {
-            apiKey: {value: ""},
-            name: {value: ""}
+            apiKey: { value: "", required: true },
+            name: { value: "" }
         },
         label: function () {
             return this.name;
