Simplify node documentation

--- a/m2x/m2x.html
+++ b/m2x/m2x.html
@@ -49,7 +49,7 @@
     <p>
     The message should contain the following properties:<br>
     * <b>msg.topic</b> (required) - The type of object to act on (collections, commands, devices, distributions, jobs, keys)<br>
-    * <b>msg.action</b> (required) - An action to be applied for this type of object, correspond with the methods defined for the entity specified in <b>msg.topic</b><br>
+    * <b>msg.action</b> (required) - An action to be applied for this type of object, corresponds with the methods defined for the entity specified in <b>msg.topic</b><br>
     * <b>msg.topic_id</b> (optional) - The unique identifier to be passed to the method defined on <b>msg.action</b><br>
     * <b>msg.sub_topic_id</b> (optional) - The unique identifier of an instance relative to the <b>msg.topic_id</b> (e.g.: msg.topic_id could be a device id and msg.sub_topic_id could be a stream or trigger id)<br>
     * <b>msg.payload</b> (optional) - A JSON object that will be the body of the request when applicable.
